--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,6 +5,7 @@ environment:
   ANT_HOME: C:\ant\apache-ant-1.9.14
   matrix:
   - JAVA_HOME: C:\Program Files\Java\jdk1.7.0
+  - JAVA_HOME: C:\Program Files\Java\jdk1.8.0
 
 install:
   - ps: |
