--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,6 +8,7 @@ environment:
   - JAVA_HOME: C:\Program Files\Java\jdk9
   - JAVA_HOME: C:\Program Files\Java\jdk10
   - JAVA_HOME: C:\Program Files\Java\jdk11
+  - JAVA_HOME: C:\Program Files\Java\jdk12
 
 install:
   - ps: |
