--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,6 +9,7 @@ environment:
   - JAVA_HOME: C:\Program Files\Java\jdk10
   - JAVA_HOME: C:\Program Files\Java\jdk11
   - JAVA_HOME: C:\Program Files\Java\jdk12
+  - JAVA_HOME: C:\Program Files\Java\jdk13
 
 install:
   - ps: |
