ANT: predef includeantruntime=false for javac
Closes issue #6.

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,10 @@
   <property name="images"  location="${source}/images"/>
   <property name="rom"     location="${source}/rom"/>
 
+  <presetdef name="javac">
+    <javac includeantruntime="false" />
+  </presetdef>
+
   <target name="clean">
     <delete dir="${build}"/>
     <delete dir="${javadoc}"/>
