--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,14 +1,27 @@
 version: '{branch}-{build}'
-image: Visual Studio 2017
 
 environment:
   matrix:
-  - JAVA_HOME: C:\Program Files\Java\jdk1.8.0
-  - JAVA_HOME: C:\Program Files\Java\jdk9
-  - JAVA_HOME: C:\Program Files\Java\jdk10
-  - JAVA_HOME: C:\Program Files\Java\jdk11
-  - JAVA_HOME: C:\Program Files\Java\jdk12
-  - JAVA_HOME: C:\Program Files\Java\jdk13
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    JAVA_HOME: C:\Program Files\Java\jdk1.8.0
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    JAVA_HOME: C:\Program Files\Java\jdk9
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    JAVA_HOME: C:\Program Files\Java\jdk10
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    JAVA_HOME: C:\Program Files\Java\jdk11
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    JAVA_HOME: C:\Program Files\Java\jdk12
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    JAVA_HOME: C:\Program Files\Java\jdk13
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    JAVA_HOME: C:\Program Files\Java\jdk14
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+    JAVA_HOME: C:\Program Files\Java\jdk15
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+    JAVA_HOME: C:\Program Files\Java\jdk16
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+    JAVA_HOME: C:\Program Files\Java\jdk17
 
 install:
   - ps: choco install ant --ignore-dependencies --version 1.10.12 -y
