--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,33 +2,111 @@ version: '{branch}-{build}'
 
 environment:
   matrix:
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    JAVA_HOME: C:\Program Files\Java\jdk1.8.0
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    JAVA_HOME: C:\Program Files\Java\jdk9
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    JAVA_HOME: C:\Program Files\Java\jdk10
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    JAVA_HOME: C:\Program Files\Java\jdk11
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    JAVA_HOME: C:\Program Files\Java\jdk12
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    JAVA_HOME: C:\Program Files\Java\jdk13
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    JAVA_HOME: C:\Program Files\Java\jdk14
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
-    JAVA_HOME: C:\Program Files\Java\jdk15
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
-    JAVA_HOME: C:\Program Files\Java\jdk16
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
-    JAVA_HOME: C:\Program Files\Java\jdk17
 
-install:
-  - ps: choco install ant --ignore-dependencies --version 1.10.12 -y
-  - ps: $env:Path="$($env:JAVA_HOME)\bin;$($env:Path);C:\ProgramData\chocolatey\lib\ant"
-  - ps: $env:ANT_OPTS="-Dfile.encoding=UTF-8"
-  - java -version
-  - ant -version
+# ======================================
+#      Linux
+# ======================================
+
+    - job_type: Linux
+      APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
+    - job_type: Linux
+      APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      JAVA_HOME: /usr/lib/jvm/java-9-openjdk-amd64
+    - job_type: Linux
+      APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      JAVA_HOME: /usr/lib/jvm/java-10-openjdk-amd64
+    - job_type: Linux
+      APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
+    - job_type: Linux
+      APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      JAVA_HOME: /usr/lib/jvm/java-12-openjdk-amd64
+    - job_type: Linux
+      APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      JAVA_HOME: /usr/lib/jvm/java-13-openjdk-amd64
+    - job_type: Linux
+      APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      JAVA_HOME: /usr/lib/jvm/java-14-openjdk-amd64
+    - job_type: Linux
+      APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      JAVA_HOME: /usr/lib/jvm/java-15-openjdk-amd64
+    - job_type: Linux
+      APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      JAVA_HOME: /usr/lib/jvm/java-16-openjdk-amd64
+    - job_type: Linux
+      APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      JAVA_HOME: /usr/lib/jvm/java-17-openjdk-amd64
+    - job_type: Linux
+      APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      JAVA_HOME: /usr/lib/jvm/java-18-openjdk-amd64
+
+# ======================================
+#      Windows
+# ======================================
+
+    - job_type: Windows
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      JAVA_HOME: C:\Program Files\Java\jdk8
+    - job_type: Windows
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      JAVA_HOME: C:\Program Files\Java\jdk9
+    - job_type: Windows
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      JAVA_HOME: C:\Program Files\Java\jdk10
+    - job_type: Windows
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      JAVA_HOME: C:\Program Files\Java\jdk11
+    - job_type: Windows
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      JAVA_HOME: C:\Program Files\Java\jdk12
+    - job_type: Windows
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      JAVA_HOME: C:\Program Files\Java\jdk13
+    - job_type: Windows
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      JAVA_HOME: C:\Program Files\Java\jdk14
+    - job_type: Windows
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+      JAVA_HOME: C:\Program Files\Java\jdk15
+    - job_type: Windows
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+      JAVA_HOME: C:\Program Files\Java\jdk16
+    - job_type: Windows
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+      JAVA_HOME: C:\Program Files\Java\jdk17
+
+for:
+
+# ======================================
+#      Linux
+# ======================================
+
+  - matrix:
+      only:
+        - job_type: Linux
+    install:
+      - sh: PATH="${JAVA_HOME}/bin:${PATH}"
+      - sh: java -version
+      - sh: ant -version
+
+# ======================================
+#      Windows
+# ======================================
+
+  - matrix:
+      only:
+        - job_type: Windows
+    install:
+      - ps: choco install ant --ignore-dependencies --version 1.10.12 -y
+      - ps: $env:Path="$($env:JAVA_HOME)\bin;$($env:Path);C:\ProgramData\chocolatey\lib\ant"
+      - ps: $env:ANT_OPTS="-Dfile.encoding=UTF-8"
+      - cmd: java -version
+      - cmd: ant -version
+    cache:
+      - C:\Users\appveyor\.ant
+      - C:\ProgramData\chocolatey\bin
+      - C:\ProgramData\chocolatey\lib
 
 init:
   - git config --global core.autocrlf input
@@ -37,11 +115,6 @@ build_script:
   - ant jar
 
 test: false
-
-cache:
-  - C:\Users\appveyor\.ant
-  - C:\ProgramData\chocolatey\bin
-  - C:\ProgramData\chocolatey\lib
 
 artifacts:
   - path: jkcemu.jar
